--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,11 @@ dependencies:
     sdk: flutter
   google_sign_in: ^6.1.5
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.10.1
+  logger: ^2.0.2+1
 
 dev_dependencies:
   flutter_test:
