--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.1.0
   google_sign_in: ^6.1.5
-
+  google_sign_in_web: ^0.12.0
+  google_sign_in_platform_interface: ^2.4.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_auth: ^4.10.1
+  firebase_auth: ^4.12.0
   logger: ^2.0.2+1
 
 dev_dependencies:
